<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/prod_batch_num"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_batch_no"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/prod_pallet"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_pall_no"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/prod_item_no"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_item_no"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_item_name"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.275"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/prod_recipe_no"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.525"
            android:id="@+id/txt_recipe_no"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/prod_recipe_ver"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:id="@+id/txt_recipe_ver"
            android:layout_gravity="end"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.55">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="@string/prod_planned_qty"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_planned_qty"
                android:layout_marginStart="12dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_uom"
                android:layout_marginStart="3dp"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.45">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="@string/prod_total_qty"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_total_qty"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_uom_2"
                android:layout_marginStart="1dp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/prod_pallet_qty"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_pallet_qty"
            android:layout_marginStart="6dp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_uom_3"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>