<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".movePickTicket.PickTicketMoveActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:id="@+id/layout_back"
            android:background="@drawable/layout_style">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_pre"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/so_moving"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/bg_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/so_transaction_date"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"/>

            <TextView
                android:id="@+id/txt_tran_date"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.31"
                android:background="@drawable/bg_input"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:gravity="start"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:orientation="vertical"
                android:background="@drawable/layout_style"
                android:id="@+id/layout_date">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_calendar"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:text="@string/so_btn_move"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:background="@drawable/button_style"
                android:id="@+id/btn_move"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#eee"
        android:layout_marginTop="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/layout_pallet"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/so_pick_ticket"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/so_tro_no"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_so_no"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.65"
                android:background="@drawable/bg_input"
                android:inputType="textNoSuggestions"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layout_style"
                android:id="@+id/layout_search_no">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/icon_search"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/so_to"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_to"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.75"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/so_ship_date"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_ship_date"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.75"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/so_remaining_item"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_remain_item"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <Button
                android:layout_width="85dp"
                android:layout_height="25dp"
                android:textColor="#fff"
                android:text="@string/so_btn_remain"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:background="@drawable/button_style"
                android:id="@+id/btn_remain"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/so_nonplt_item"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_nonplt_item"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <Button
                android:layout_width="85dp"
                android:layout_height="25dp"
                android:textColor="#fff"
                android:text="@string/so_btn_nonplt"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:background="@drawable/button_style"
                android:id="@+id/btn_nonplt"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#eee"
        android:layout_marginTop="3dp"/>

    <LinearLayout
        android:id="@+id/layout_pallet_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/so_scan_msg"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:id="@+id/txt_alert"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/list_ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            tools:listitem="@layout/item_move_ticket"/>

    </LinearLayout>

</LinearLayout>